--- a/about.html
+++ b/about.html
@@ -260,8 +260,7 @@ Our President  Ms. Meneka Singh & Secretary Ms. Kusum Rathore (School Principal)
                                 <div class="section-title mb-35">
                                     <span class="section-title__subtitle mb-10">Our Features</span>
                                     <h2>How Could <span>You Help?</span></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem autem voluptatem
-                                        obcaecati consectetur adipisicing</p>
+                                    <p>You can help our foundation in many ways like, If you are a qualified teacher then you can join our school, If you are a Doctor then you can join our mission for free health checkup camps & if you don't want to fully involved then simply you can donate for our schools or sponsor some patients for free Eye surgery.</p>
                                 </div>
                             </div>
                             <div class="col-lg-4">
