--- a/about.html
+++ b/about.html
@@ -274,22 +274,19 @@ Our President  Ms. Meneka Singh & Secretary Ms. Kusum Rathore (School Principal)
                                     <div class="feature-item">
                                         <div class="feature-item__icon"><i class="flaticon-help"></i></div>
                                         <h4><a href="cause-details.html">Become an volunteer</a></h4>
-                                        <p>Lorem ipsum dolor sit amet consect cingo eiusmod tempor sentence structures
-                                            to generate Lorem Ipsum </p>
+                                        <p>You can become a Volunteer for any of our ongoing & upcoming projects.. </p>
                                     </div>
                                     <div class="feature-item">
                                         <div class="feature-item__icon feature-item__icon--green"><i
                                                 class="flaticon-solidarity"></i></div>
                                         <h4><a href="cause-details.html">Quick Fundraising</a></h4>
-                                        <p>Lorem ipsum dolor sit amet consect cingo eiusmod tempor sentence structures
-                                            to generate Lorem Ipsum </p>
+                                        <p>You can help the foundation in quick fund raising by encouraging your family & friends to Donate us generously.. </p>
                                     </div>
                                     <div class="feature-item">
                                         <div class="feature-item__icon feature-item__icon--yellow"><i
                                                 class="flaticon-donation"></i></div>
                                         <h4><a href="cause-details.html">Start Donating</a></h4>
-                                        <p>Lorem ipsum dolor sit amet consect cingo eiusmod tempor sentence structures
-                                            to generate Lorem Ipsum </p>
+                                        <p>Anybody can start donating with as minimum as Rs 1/-. Its so simple taht you can just scan our QR Code and pay the amount as per your convenience & share their Details like Name, Address, PAN & AADHAR on our email... </p>
                                     </div>
                                     <div class="feature-item">
                                         <div class="feature-item__icon"><i class="flaticon-help"></i></div>
