--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                 <div class="col-xl-6 col-lg-8 col-md-10">
                     <div class="section-title text-center mb-50">
                         <span class="section-title__subtitle mb-10">Our Projects</span>
-                        <h3>Our <span>Latest Causes</span></h3>
-                        <p>Presently we are working on 2 projects "Drishti For All" & "Education For All"</p>
+                        <h3>Our <span>Our On Going Projects</span></h3>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -322,7 +322,7 @@
                                 <span>Raised : Rs. 1,00,000/-</span>
                                 <span>Goal : Rs. 33,00,000/-</span>
                             </div>
-                            <p>We are focusing on specifically Quality education in Rural areas. Our basic motto is to provide quality education at very affordable price. It is basically to fill a huge Gap between Schools in Rural villages & private expensive schools.
+                            <p>We are committed to offer Quality education in Rural areas. Our basic motto is to provide quality education at very affordable price. It is basically to fill a huge Gap between Schools in Rural villages & private expensive schools.
                                 Providing education in a very healthy atmosphere to rural children bringing them at a level playing field amongst other private school children.
                                 </p>
                             <div class="cause-btn">
@@ -974,7 +974,7 @@
                                 <img src="assets/img/logos/logo-trans.png" alt="Logo" width="100" height="auto">
                             </a>
                         </div>
-                        <p>READY TO HELP IN ALL WAYS.</p>
+                        <p>READY TO HELP ALWAYS IN ALL WAYS.</p>
                         <div class="social-style-one pt-20">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
