--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <div class="col-xl-6 col-lg-8 col-md-10">
                     <div class="section-title text-center mb-50">
                         <span class="section-title__subtitle mb-10">Our Projects</span>
-                        <h3>Our <span>Our On Going Projects</span></h3>
+                        <h3><span>Our On Going Projects</span></h3>
                         <p></p>
                     </div>
                 </div>
